--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -24,6 +24,8 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.12",
     "nodemon": "^3.1.11",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "pdf-parse-fork": "^1.2.0"
   }
 }
