--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -26,6 +26,7 @@
     "nodemon": "^3.1.11",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "pdf-parse-fork": "^1.2.0"
+    "pdf-parse-fork": "^1.2.0",
+    "resend": "^6.9.1"
   }
 }
